--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,54 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div id="user-data">
+      <form (ngSubmit)="onSubmit()" #formObject="ngForm">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control">
+            <input type="text" id="username" class="form-control" name="userName" 
+              placeholder="Enter your name" required ngModel #userName="ngModel">
+              <span class="help-block" *ngIf = "!userName.valid && userName.touched">Please fill your name!</span>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
-            <input type="email" id="email" class="form-control">
+            <input type="email" id="email" class="form-control"
+             name="email" placeholder="Enter your email address(test@test.com)" required ngModel email #email="ngModel">
+            <span class="help-block" *ngIf = "!email.valid && email.touched">Please enter valid email address!</span>
           </div>
         </div>
+        <p *ngIf="!userData.valid && userData.touched">User Data is Invalid!</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control">
+          <select id="secret" class="form-control" name="secret" [ngModel]="defaultQuestion">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <div class="form-group">
+          <textarea name="questionAnswer" class="form-control" rows="3" [(ngModel)]="answer"></textarea>
+        </div>
+        <p>Your answer is {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" name="gender" [value]="gender" required ngModel>
+            {{ gender }}
+          </label>
+        </div>
+        <button class="btn btn-primary" type="submit" [disabled]="!formObject.valid">Submit</button>
       </form>
+    </div>
+  </div>
+  <div *ngIf="submitted">
+    <hr>
+    <div class="row">
+      <div class="col-xs-12">
+        <h3>Your Data</h3>
+        <p>UserName: {{ user.userName }}</p>
+        <p>Email: {{ user.email }}</p>
+        <p>Secret Question: Your first {{ user.secret }}?</p>
+        <p>Gender: {{ user.gender }}</p>
+      </div>
     </div>
   </div>
 </div>
